Upgrade dependencies, fix image stretching

--- a/src/app/pages/images/images.component.scss
+++ b/src/app/pages/images/images.component.scss
@@ -47,7 +47,8 @@
     img {
       width: auto;
       max-width: 100%;
-      height: 50vh;
+      max-height: 50vh;
+      height: auto;
     }
   }
 
